--- a/bucketlist-frontend/package.json
+++ b/bucketlist-frontend/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/underscore": "^1.8.0",
     "core-js": "^2.4.1",
+    "ng2-pagination": "^2.0.1",
     "rxjs": "^5.1.0",
+    "underscore": "^1.8.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
