--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,9 @@ dependencies:
         - pip install coveralls
 test:
     override:
-        - nose2 --with-coverage
+        - nosetests --with-coverage
+    post:
+        - coveralls
 deployment:
   staging:
     branch: backend
