--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,8 @@ blinker==1.4
 click==6.7
 colorama==0.3.7
 cov-core==1.15.0
-coverage==4.0.3
+coverage==4.4.1
 coveralls==1.1
-curl==2017.0.1
 decorator==4.0.11
 docopt==0.6.2
 flake8==3.3.0
@@ -32,6 +31,7 @@ Naked==0.1.31
 nose==1.3.7
 nose2==0.6.5
 packaging==16.8
+paginate==0.5.6
 passlib==1.7.1
 pep8==1.7.0
 psycopg2==2.7.1
