--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,7 @@ dependencies:
         - pip install -r requirements.txt
         - pip install coveralls
 test:
+    database: testbucketlist
     override:
         - nose2 --with-coverage
     post:
